@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, 2026, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2024, Red Hat, Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -24,8 +24,10 @@
 
 /**
  * @test id=nocoops_nocoh
- * @summary Test Loading of default archives in all configurations
+ * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-nocoh)
  * @requires vm.cds
+ * @requires vm.cds.default.archive.available
+ * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
@@ -35,8 +37,10 @@
 
 /**
  * @test id=nocoops_coh
- * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-coh)
+ * @summary Test Loading of default archives in all configurations
  * @requires vm.cds
+ * @requires vm.cds.default.archive.available
+ * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
@@ -46,9 +50,12 @@
 
 /**
  * @test id=coops_nocoh
- * @summary Test Loading of default archives in all configurations
+ * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-nocoh)
  * @requires vm.cds
+ * @requires vm.cds.default.archive.available
+ * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
+ * @requires vm.gc != "Z"
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
@@ -57,9 +64,12 @@
 
 /**
  * @test id=coops_coh
- * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-coh)
+ * @summary Test Loading of default archives in all configurations
  * @requires vm.cds
+ * @requires vm.cds.default.archive.available
+ * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
+ * @requires vm.gc != "Z"
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
@@ -72,13 +82,16 @@ import java.nio.file.Paths;
 import jdk.test.lib.Platform;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
+import jdk.test.lib.Utils;
 
 import jtreg.SkippedException;
 
 public class TestDefaultArchiveLoading {
 
+    static String archivePreviewSuffix = "";
+
     private static String archiveName(String archiveSuffix) {
-        return "classes" + archiveSuffix + ".jsa";
+        return "classes" + archiveSuffix + archivePreviewSuffix + ".jsa";
     }
 
     private static Path archivePath(String archiveSuffix) {
@@ -86,8 +99,8 @@ public class TestDefaultArchiveLoading {
                          "server", archiveName(archiveSuffix));
     }
 
-    private static boolean isCOHArchiveAvailable(char coops, char coh,
-                                                 String archiveSuffix) throws Exception {
+    private static boolean isArchiveAvailable(char coops, char coh,
+                                              String archiveSuffix) throws Exception {
         Path archive= archivePath(archiveSuffix);
         return Files.exists(archive);
     }
@@ -100,17 +113,27 @@ public class TestDefaultArchiveLoading {
 
         String archiveSuffix;
         char coh, coops;
+        for (String opt : Utils.getTestJavaOpts()) {
+            if (opt.contains("--enable-preview")) {
+                archivePreviewSuffix = "_preview";
+                break;
+            }
+        }
 
         switch (args[0]) {
             case "nocoops_nocoh":
                 coh = coops = '-';
-                archiveSuffix = "_nocoops";
+                archiveSuffix = "_nocoops_nocoh";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
+                    throw new SkippedException("Skipping test due to " +
+                                               archivePath(archiveSuffix).toString() + " not available");
+                }
                 break;
             case "nocoops_coh":
                 coops = '-';
                 coh = '+';
-                archiveSuffix = "_nocoops_coh";
-                if (!isCOHArchiveAvailable(coops, coh, archiveSuffix)) {
+                archiveSuffix = "_nocoops";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
                 }
@@ -118,12 +141,16 @@ public class TestDefaultArchiveLoading {
             case "coops_nocoh":
                 coops = '+';
                 coh = '-';
-                archiveSuffix = "";
+                archiveSuffix = "_nocoh";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
+                    throw new SkippedException("Skipping test due to " +
+                                               archivePath(archiveSuffix).toString() + " not available");
+                }
                 break;
             case "coops_coh":
                 coh = coops = '+';
-                archiveSuffix = "_coh";
-                if (!isCOHArchiveAvailable(coops, coh, archiveSuffix)) {
+                archiveSuffix = "";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
                 }
@@ -131,8 +158,7 @@ public class TestDefaultArchiveLoading {
             default: throw new RuntimeException("Invalid argument " + args[0]);
         }
 
-        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
-                "-XX:+UnlockExperimentalVMOptions",
+        ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder(
                 "-XX:" + coh + "UseCompactObjectHeaders",
                 "-XX:" + coops + "UseCompressedOops",
                 "-Xlog:cds",
